# cloth-fit

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PolyFEMOptions.cmake.sample  README.md  codecov.yml  justfile  todo.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous.yml
cloth_fit_cli/: .gitignore  README.md  bundlex.exs  cloth_fit.db  mix.exs  test_actual_simulations.exs  test_all_avatars.exs  test_nifs.exs  test_remaining_garments.exs  test_simulation_configs.exs
cloth_fit_cli/c_src/cloth_fit_cli/: polyfem.cpp  polyfem.h  polyfem.spec.exs
cloth_fit_cli/c_src/polyfem_nif/: polyfem_nif.cpp  polyfem_nif.h  polyfem_nif.spec.exs
cloth_fit_cli/config/: config.exs  test.exs
cloth_fit_cli/lib/: cloth_fit_cli.ex  polyfem.ex
cloth_fit_cli/lib/cloth_fit_cli/: application.ex  cli.ex  config.ex  polyfem.ex  polyfem_nif.ex  repo.ex
cloth_fit_cli/lib/cloth_fit_cli/workers/: cloth_fit_worker.ex
cloth_fit_cli/priv/bundlex/cnode/: polyfem
cloth_fit_cli/priv/repo/migrations/: 20250812024504_add_oban.exs
cloth_fit_cli/test/: cloth_fit_cli_test.exs
cmake/patches/: igl_patch.patch
cmake/polyfem/: polyfem_autogen.cmake  polyfem_filter_flags.cmake  polyfem_warnings.cmake
cmake/recipes/: catch2.cmake  cli11.cmake  eigen.cmake  finite_diff.cmake  geogram.cmake  ipc_toolkit.cmake  jse.cmake  libigl.cmake  openvdb.cmake  polysolve.cmake  spdlog.cmake  tinygltf.cmake
garment-data/Goblin_Jacket/: setup.json
garment-data/Goblin_Jumpsuit/: setup.json
garment-data/Mire_Jumpsuit/: setup.json
garment-data/Trex_Jacket/: setup.json
garment-data/assets/avatars/FoxGirl/: avatar.mtl
garment-data/assets/avatars/Goblin/: avatar.mtl
garment-data/assets/avatars/Mire/: avatar.mtl  skeleton.mtl  skin.txt
garment-data/assets/avatars/T-rex/: skeleton.mtl
garment-data/assets/garments/LCL_Skirt_DressEvening_003/: cage.mtl  garment.mtl  no-fit.txt
garment-data/assets/garments/Puffer_dense/: cage.mtl  garment.mtl  no-fit.txt
garment-data/assets/garments/jumpsuit_dense/: cage.mtl  curves.txt  garment.mtl  garment.obj.backup  skeleton.obj.backup
garment-data/foxgirl_skirt/: setup.json
garment-data/mire_skirt/: setup.json
json-specs/: boundary-condition.json  input-spec.json  interpolation.json  log.json  objective-spec.json  opt-input-spec.json  polysolve.json  selection.json  value-no.json  value.json  value0.json  value1.json
scripts/: BoneMapper.gd  GLTFLoader.gd  MeshExporter.gd  SkeletonProcessor.gd  Utils.gd  WeightExtractor.gd  convert_glb_to_obj.gd
src/polyfem/: CMakeLists.txt  Common.hpp  main.cpp  mytest.cpp
src/polyfem/autogen/: CMakeLists.txt  auto_derivatives.cpp  auto_derivatives.hpp  auto_derivatives2.cpp  auto_derivatives3.cpp
src/polyfem/garment/: CMakeLists.txt  optimize.cpp  optimize.hpp
src/polyfem/io/: CMakeLists.txt  GLTFReader.cpp  GLTFReader.hpp  GLTFWriter.cpp  GLTFWriter.hpp  MatrixIO.cpp  OBJData.hpp  OBJReader.cpp  OBJReader.hpp  OBJWriter.cpp  OBJWriter.hpp
src/polyfem/mesh/: CMakeLists.txt  MeshUtils.cpp  MeshUtils.hpp
src/polyfem/mesh/remesh/: L2Projection.cpp
src/polyfem/solver/: ALSolver.cpp  ALSolver.hpp  CMakeLists.txt  FullNLProblem.cpp  GarmentNLProblem.cpp  GarmentNLProblem.hpp
src/polyfem/solver/forms/: CMakeLists.txt  ContactForm.cpp  ContactForm.hpp  CurveConstraintForm.hpp  GarmentALForm.cpp  GarmentALForm.hpp  GarmentForm.cpp  GarmentForm.hpp
src/polyfem/solver/forms/garment_forms/: CMakeLists.txt  CurveCenterTargetForm.cpp  CurveCenterTargetForm.hpp  CurveConstraintForm.cpp  CurveConstraintForm.hpp  FitForm.cpp  FitForm.hpp  GarmentForm.cpp  GarmentForm.hpp
src/polyfem/state/: StateInit.cpp  StateSolveNonlinear.cpp
src/polyfem/utils/: CMakeLists.txt  MatrixCache.cpp  MatrixCache.hpp  MatrixUtils.cpp  getRSS.h
tests/: CMakeLists.txt  selection.txt  skin.txt  test_form_derivatives.cpp  test_garment.cpp  test_gltf_io.cpp  test_io.cpp  test_mesh.cpp
tests/avatar0_Sweater_CableKnit_001/: setup.json
tests/avatar0_Sweater_CableKnit_001/avatar/: skin.txt
